--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ nav ul li {
   padding-left: 25px;
 }
 
-.search-header {
+.search-nav-header {
   color: #FFFFFF;
   background-color: #025694;
   font-size: 24px;
